# fresh-box

./: .gitignore  LICENSE  PRIORITY_CONFIG_SYSTEM.md  README.md  STACK_CONFIG_PRIORITY.md  WINDOWS_CRASH_FIX.md  clash_api_summary.md  debug_start.bat  eslint.config.js  example.json  fix-ts.cjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  require.md  todo.md
.github/workflows/: main.yml
refer/: .gitignore  CLAUDE.md
refer/src/: App.vue
src/: App.tsx  App.vue  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clash_api.rs  config.rs  config_override.rs  core_update.rs  errors.rs  lib.rs  logger.rs  main.rs  priority_config.rs  proxy.rs  singbox.rs  stack_config.rs  streams.rs  tray.rs  window_utils.rs
src-tauri/src/commands/: clash.rs  config.rs  config_override.rs  core_update.rs  mod.rs  priority.rs  singbox.rs  streams.rs  tray.rs
src-tauri/src/config/: app_settings.rs  config_override.rs  io.rs  mod.rs  paths.rs  priority.rs  profiles.rs
src-tauri/src/services/: clash_client.rs  core_update.rs  mod.rs  singbox.rs  streams.rs
src.old/: main.tsx
src.old/assets/: styles.css
src.old/components/: Config.tsx  Connections.tsx  Logs.tsx  Rules.tsx  Settings.tsx
src.old/hooks/: useClash.ts  useConnectionsStream.ts  useToast.ts
src.old/services/: coreClient.ts  tauri.ts
src.vue/: App.vue
src.vue/components/: Custom.vue  Proxies.vue  Rules.vue
src.vue/composables/: useConnectionsStream.ts  useLogsStream.ts  useRulesPage.ts
src.vue/stores/: appStore.ts
src.vue/types/: app.ts
src/assets/: styles.css
src/components/: Config.tsx  Config.vue  ConfigViewer.vue  Connections.tsx  Connections.vue  Custom.tsx  Customer.vue  GlobalToaster.tsx  Logs.tsx  Logs.vue  Overview.tsx  Overview.vue  Proxies.tsx  Proxy.vue  ProxyPage.vue  Rules.tsx  Rules.vue  Settings.tsx  Settings.vue  Sidebar.tsx  Sidebar.vue  Toast.vue
src/composables/: useClash.ts  useConfigs.ts  useConnectionsStream.ts  useLogsStream.ts  useRulesPage.ts  useSettings.ts  useSingbox.ts  useToast.ts
src/hooks/: useClash.ts  useConfigs.ts  useConnectionsStream.ts  useCoreUpdate.ts  useInit.ts  useLogsStream.ts  useMemoryStream.ts  usePriorityConfig.ts  useRules.ts  useRulesPage.ts  useSettings.ts  useSingbox.ts  useTheme.ts  useToast.tsx  useTrafficStream.ts  useWindowVisibility.ts
src/pages/: Settings.vue
src/services/: api.ts  configOverride.ts  coreClient.ts  tauri.ts  utils.ts
src/stores/: appStore.ts  (+4 more)
test_bat/: WINDOWS_CRASH_FIX.md  monitor.bat
(+76 files in other folders)
