[package]
name = "fresh-box"
version = "1.6.9"
description = "fresh-box"
authors = ["sentsuki"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fresh_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
sysinfo = "0.39"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
urlencoding = "2"
zip = "8"
window-vibrancy = "0.7"
tauri-plugin-notification = "2"
rand = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
